# ThermalSimulation

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  Simulator.cpp  Simulator.cu  Simulator.h  buffer.cpp  buffer.h  common.h  define.h  main.cpp  test.cpp  test.cu  test.h  utils.cpp  utils.cu  utils.h
BattleShip/: ADD.m  ECEF2Geoditic.m  Geoditic2ECEF.m  Untitled11.m  Untitled13.m  battleship_01.ac  battleship_02.ac  battleship_03.ac  battleship_04.ac  battleship_05.ac  battleship_08_01.ac.bak  battleship_08_02.ac  battleship_08_03.ac  battleship_08_03.ac.bak  convert2image.m  distance2target_2.m  distanceToface.m  imageModel.m  in2out.m  nhat_ship.ac  nhat_ship_2.ac  parallel.m  parallel.m~  ship_data.mat  ship_data_2.mat  surfaceCross.m  test_Surface_2.m  test_Surface_3.m  test_Surface_3.m~  test_surface.m  video_image_infrared.slxc
BattleShip/slprj/_jitprj/: jitEngineAccessInfo.mat  sTNYhVZZo9lmCFdayoX3Y7B.l  sTNYhVZZo9lmCFdayoX3Y7B.mat  swsbVIhe8HuPLtmqeh0LgxG.l  swsbVIhe8HuPLtmqeh0LgxG.mat  sxn0bOCMFIgIu19D48U77fF.l  sxn0bOCMFIgIu19D48U77fF.mat
CS/: ship_data_3.mat  test_frame_image.m
data/: Data_vertices.txt  Missile_100hz.txt  Missile_30hz.txt  Seeker_100hz.txt  Seeker_30hz.txt  Target_100hz.txt  Target_30hz.txt
log/: ship_face_gps.txt  ship_face_imgPos.txt  ship_gps.txt  ship_imgPos.txt
reference/: ship_face_gps_pos.txt  ship_face_image_pos.txt
test_data/: missile_data_test.txt  seeker_data_test.txt  ship_data_face.txt  ship_data_vertices.txt  ship_face_gps_pos.txt  ship_face_image_pos.txt  target_data_test.txt
(+19 files in other folders)
